fix(lxlweb): Adjust padding & overflow (LWS-368, 371) (#1299)
* fix(lxlweb): remove search card padding-x for small screens
* Truncate mapping pills
* Prevent overflow-x for modal
* Break long ext-links
* Allow contribution stuff to wrap in overview

--- a/lxl-web/src/app.css
+++ b/lxl-web/src/app.css
@@ -182,6 +182,10 @@
 		}
 	}
 
+	.ext-link {
+		word-break: break-word;
+	}
+
 	a.ext-link::after {
 		background-color: var(--color-link);
 		content: '';
